<resources>
    <string name="app_name">PrimeiroApp</string>

    <string name="hello_world">Olá Mundo!</string>
    <string name="action_settings">Opções</string>
    <string name="lbl_txt_primeiro_numero">Primeiro Número</string>
    <string name="lbl_txt_segundo_numero">Segundo Número</string>
    <string name="lbl_btn_somar">Somar</string>
    <string name="lbl_txt_texto_com_estilo">Texto com estilo</string>
    <string name="lbl_txt_nome">Nome</string>
    <string name="lbl_txt_telefone">Telefone</string>
    <string name="lbl_txt_endereco">Endereço</string>
    <string name="lbl_btn_salvar">Salvar</string>
    <string name="lbl_txt_instrucoes">Texto com instruções... ptbr ptbr ptbr ptbr</string>
    <string name="lbl_nome" translatable="false">Nome</string>

    <string-array name="lista_exemplos">
        <item>0 - Ciclo de vida, navegação entre Activities e logCat</item>
        <item>1 - Calculadora Simples(Interface XML, Java, findViewById, visibility e evento click)</item>
        <item>2 - Interface LayoutInflater</item>
        <item>3 - Interface com recursos(strings.xml, colors.xml, estilos e internacionalização)</item>
    </string-array>
</resources>
